have JLama working both using JBang and in the metatraon project.