@@ -14,8 +14,15 @@
         <langgraph4j.version>1.6.1</langgraph4j.version>
         <junit.version>5.11.0</junit.version>
         <tinkerpop.version>3.7.4</tinkerpop.version>
+        <jlama.version>0.8.4</jlama.version>
+        <os.detected.name>linux</os.detected.name>
+        <os.detected.arch>x86_64</os.detected.arch>
+        <os.detected.classifier>linux-x86_64</os.detected.classifier>
     </properties>
+
+
     <dependencyManagement>
+
         <dependencies>
             <!-- LANGGRAPH -->
             <dependency>
@@ -25,6 +32,7 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <!-- TINKERPOP -->
             <dependency>
                 <groupId>org.apache.tinkerpop</groupId>
                 <artifactId>tinkerpop</artifactId>
@@ -38,6 +46,14 @@
                 <version>${junit.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.github.tjake</groupId>
+                <artifactId>jlama-native</artifactId>
+                <!-- supports linux-x86_64, macos-x86_64/aarch_64, windows-x86_64
+                     Use https://github.com/trustin/os-maven-plugin to detect os and arch -->
+                <classifier>${os.detected.name}-${os.detected.arch}</classifier>
+                <version>${jlama.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -69,6 +85,12 @@
             <artifactId>tinkergraph-gremlin</artifactId>
             <version>${tinkerpop.version}</version>
         </dependency>
+        <!-- JLAMA -->
+        <dependency>
+            <groupId>com.github.tjake</groupId>
+            <artifactId>jlama-core</artifactId>
+            <version>${jlama.version}</version>
+        </dependency>
         <!--<dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>ollama</artifactId>
@@ -92,6 +114,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
     <repositories>
         <repository>
             <id>sonatype-oss-snapshots</id>
@@ -101,7 +124,16 @@
             </snapshots>
         </repository>
     </repositories>
+
     <build>
+
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.0</version>
+            </extension>
+        </extensions>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
             <plugins>
                 <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
@@ -117,6 +149,14 @@
                 <plugin>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.13.0</version>
+                    <configuration>
+                        <source>24</source>
+                        <target>24</target>
+                        <compilerArgs>
+                            <arg>--add-modules</arg>
+                            <arg>jdk.incubator.vector</arg>
+                        </compilerArgs>
+                    </configuration>
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
@@ -142,6 +182,25 @@
                 <plugin>
                     <artifactId>maven-project-info-reports-plugin</artifactId>
                     <version>3.6.1</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <configuration>
+                        <classifier>${os.detected.classifier}</classifier>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>kr.motd.maven</groupId>
+                    <artifactId>os-maven-plugin</artifactId>
+                    <version>1.7.0</version>
+                    <executions>
+                        <execution>
+                            <phase>initialize</phase>
+                            <goals>
+                                <goal>detect</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
             </plugins>
         </pluginManagement>
